--- a/Python Practice/string.ipynb
+++ b/Python Practice/string.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    " #INTERVIEW QUESTION - Find out common letters between two strings Using Python"
+    " INTERVIEW QUESTION - Find out common letters between two strings Using Python"
    ]
   },
   {
