--- a/Python Practice/string.ipynb
+++ b/Python Practice/string.ipynb
@@ -97,6 +97,31 @@
     "        print(i)\n",
     "dict_to_tuple()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Armstrong Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = int(input('Enter a number: '))\n",
+    "x = num\n",
+    "num = len(str(num))\n",
+    "sum = 0\n",
+    "while (num>0):\n",
+    "    r = num%10\n",
+    "    sum = sum+r**num\n",
+    "    num = num//10\n",
+    "if (x==sum):\n",
+    "    print('Armstrong')"
+   ]
   }
  ],
  "metadata": {
