--- a/netsetOS-practice/string.ipynb
+++ b/netsetOS-practice/string.ipynb
@@ -143,26 +143,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "*****\n",
-      "*****\n",
-      "*****\n",
-      "*****\n",
-      "*****"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for row in range(1,6): #for row\n",
     "    print() #for second line\n",
     "    for col in range(1,6): #for column\n",
+    "        print('*',end='') #print star in same line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Printing Stars '*' in Triangle Shape (Here column dependent on row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = int(input('Enter a number: '))\n",
+    "for row in range(1,num+1): #for row\n",
+    "    print() #for second line\n",
+    "    for col in range(1,row+1): #for column that dependent on row\n",
+    "        print('*',end='') #print star in same line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Printing Stars '*' in Inverted Triangle Shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = int(input('Enter a number: '))\n",
+    "for row in range(num,0,-1): #for row\n",
+    "    print() #for second line\n",
+    "    for col in range(1,row+1): #for column that dependent on row\n",
     "        print('*',end='') #print star in same line"
    ]
   }
