--- a/netsetOS-practice/string.ipynb
+++ b/netsetOS-practice/string.ipynb
@@ -192,6 +192,60 @@
     "    for col in range(1,row+1): #for column that dependent on row\n",
     "        print('*',end='') #print star in same line"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Printing Stars '*' in Right angled Triangle Shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = int(input('Enter a number: '))\n",
+    "for row in range(1,num+1,2): #for row\n",
+    "    print() #for second line\n",
+    "    for col in range(1,row+1): #for column that dependent on row\n",
+    "        print('*',end='') #print star in same line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Printing Stars '*' in Pyramid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   *\n",
+      "  **\n",
+      " ***\n",
+      "****\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input('Enter a number: '))\n",
+    "for row in range(1,num+1): #for row\n",
+    "     #for second line\n",
+    "    for col in range(1,num-row+1):\n",
+    "        print(end=' ')\n",
+    "    for col in range(1,row+1): #for column that dependent on row\n",
+    "        print('*',end='') #print star in same line\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
