--- a/netsetOS-practice/list.ipynb
+++ b/netsetOS-practice/list.ipynb
@@ -40,9 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 9, [19, 3, 'fsg']]\n",
+      "<class 'list'>\n",
+      "<class 'int'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "a1 = [1,2,4,9]\n",
     "a1.append([19,3,'fsg'])\n",
@@ -61,9 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "a1 = [1,2,4,9,[19,3,'fsg']]\n",
     "print(a1[-2])\n",
@@ -79,9 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'new', 'miligrim', 'z', 'example', 'new', ['new', 2], 'two', 'elements']\n",
+      "<class 'str'>\n",
+      "<class 'list'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "a2 = [5,6,9,3]\n",
     "a2.extend([19,3,'fsg'])\n",
@@ -104,9 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'new', 'milpigram', 'z', 'example']\n"
+     ]
+    }
+   ],
    "source": [
     "digit = ['a','b','milpigram', 'z','example']\n",
     "digit.insert(2,'new')\n",
@@ -122,9 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "b = [3,2,2,1]\n",
     "del b[1]\n",
@@ -140,9 +187,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [4,3,5]\n",
     "c = a.pop(1)\n",
@@ -159,9 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 3, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [0,2,3,2]\n",
     "a.remove(2)\n",
@@ -177,9 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 14, 13, 12, 11, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "inputList = [10,11,12,13,14,15]\n",
     "inputList.reverse()\n",
@@ -195,9 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 6, 5, 4, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "d = [1,7,6,5,4]\n",
     "d.sort()\n",
@@ -217,9 +297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "d = [1,7,6,5,4]\n",
     "a = sorted(d)\n",
@@ -235,9 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['j', 'cc', 'sss']\n"
+     ]
+    }
+   ],
    "source": [
     "d = ['sss','cc','j']\n",
     "a = sorted(d,key=len)\n",
@@ -253,9 +349,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['welcome', 'to', 'the', 'jungle']\n"
+     ]
+    }
+   ],
    "source": [
     "txt = \"welcome,to,the,jungle\"\n",
     "\n",
@@ -273,9 +377,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Reena', 'Sheena', 'Meena', 'Teena', 'Neena', 'Leena']\n",
+      "['Reena', 'Sheena', 'Meena']\n",
+      "['Reena', 'Meena', 'Neena']\n",
+      "['Meena', 'Neena']\n"
+     ]
+    }
+   ],
    "source": [
     "name = ['Reena','Sheena','Meena','Teena','Neena','Leena']\n",
     "print(name[:])\n",
@@ -293,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
