--- a/netsetOS-practice/tuple.ipynb
+++ b/netsetOS-practice/tuple.ipynb
@@ -13,9 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
     "emptytuple = ()\n",
     "tup1 = (10)\n",
@@ -39,9 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "40\n",
+      "3\n",
+      "40\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "x = (10,20,[40,50,60])\n",
     "print(x[0])\n",
@@ -62,9 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 40.9, ['cloud', 'python'])\n",
+      "(10, 40.9)\n",
+      "(40.9, ['cloud', 'python'])\n",
+      "(10, ['cloud', 'python'])\n"
+     ]
+    }
+   ],
    "source": [
     "y = (10,40.9,['cloud','python'],(60,40))\n",
     "print(y[:3])\n",
@@ -82,9 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Rahul', 'Vaidya', 'sujata', 'Puja')\n",
+      "reenareenareenareena\n"
+     ]
+    }
+   ],
    "source": [
     "tup = ('Rahul','Vaidya')+('sujata','Puja') #concatination\n",
     "print(tup)\n",
@@ -101,9 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "tup2 = (1,2,3,4,5,6,8,5,1,2,3,)\n",
     "print(tup2.count(1))"
@@ -118,9 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "tup3 = (1,2,3,4,5,6,8,5,1,2,3,)\n",
     "print(tup3.index(3))"
@@ -135,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
