--- a/netsetOS-practice/dictionary.ipynb
+++ b/netsetOS-practice/dictionary.ipynb
@@ -28,9 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "{1: 'net', 2: 'set', 3: 'os'}\n",
+      "{'name': 'Rahul', 1: [1, 2, 3, 4]}\n",
+      "{1: 'python', 2: 'java'}\n"
+     ]
+    }
+   ],
    "source": [
     "empty_dict = {}\n",
     "print(type(empty_dict))\n",
@@ -54,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "a = {1:'Jan', 2:'Feb', 3:'Mar',4:'Apr',5:'May'}\n",
     "b = a.copy()\n",
@@ -87,9 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (909111395.py, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 14\u001b[1;36m\u001b[0m\n\u001b[1;33m    dict7 = (1:'name',2:'age')\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [10,20,30,40,50]\n",
     "dict1 = {}.fromkeys(list1) #list is iterable\n",
@@ -171,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
