--- a/netsetOS-practice/sets.ipynb
+++ b/netsetOS-practice/sets.ipynb
@@ -12,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
    "source": [
     "emptyset = set()\n",
     "print(type(emptyset))"
@@ -29,9 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'java', 'c', 'c++', 'python'}\n",
+      "{1, 2, 3, 5, 6, 7}\n"
+     ]
+    }
+   ],
    "source": [
     "set1 = {'python', 'java','c'}\n",
     "set1.add('c++') #add only add one element\n",
@@ -51,9 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 5, 6, 7}\n",
+      "{1, 2, 3, 5, 6, 7, 10, 11, 12}\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [1,2,3]\n",
     "list2 = [5,6,7]\n",
@@ -71,9 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{5, 6}\n",
+      "3\n",
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "a = {1,3,5,6,7}\n",
     "a.remove(1) #give key error\n",
@@ -94,9 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4, 5, 6, 7, 8}\n",
+      "{4, 6}\n"
+     ]
+    }
+   ],
    "source": [
     "set1 = {2,4,5,6}\n",
     "set2 = {4,6,7,8}\n",
@@ -106,9 +151,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{10, 20}\n",
+      "{10, 20}\n",
+      "{100, 20, 10, 60}\n",
+      "{100, 20, 10, 60}\n"
+     ]
+    }
+   ],
    "source": [
     "set1 = {10,20,30,40,80}\n",
     "set2 = {100,30,80,40,60}\n",
@@ -128,9 +184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "x = {'a','b','c'}\n",
     "y = {'f','e','d','c','b'}\n",
@@ -151,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
