--- a/netsetOS-practice/string.ipynb
+++ b/netsetOS-practice/string.ipynb
@@ -4,236 +4,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Armstrong"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num = int(input('Enter a number'))\n",
-    "x = num\n",
-    "n = len(str(num))\n",
-    "sum = 0\n",
-    "while(num>0):\n",
-    "    r=num%10\n",
-    "    sum = sum+r**n\n",
-    "    num=num//10\n",
-    "if (x==sum):\n",
-    "    print('Armstrong Number')\n",
-    "else:\n",
-    "    print('Not a Armstrong')"
+    "# STRING BUILT-IN METHODS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "swaping using third variable"
+    "**string.strip(characters)**\n",
+    "by defualt, whitespace\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pencil\n",
+      "pencil\n"
+     ]
+    }
+   ],
    "source": [
-    "a = int(input('Enter a number: '))\n",
-    "b = int(input('Enter a number'))\n",
-    "c = a\n",
-    "a=b\n",
-    "b=c\n",
-    "print('value of a after swaping is',a)\n",
-    "print('value of a after swaping is',b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "swaping without using third variable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = int(input('Enter a number: '))\n",
-    "b = int(input('Enter a number'))\n",
-    "a = a+b\n",
-    "b = a-b\n",
-    "a = a-b\n",
-    "print('value of a after swaping is',a)\n",
-    "print('value of a after swaping is',b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "factorial using builtin function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "n = int(input('enter a number: '))\n",
-    "fact  = math.factorial(n)\n",
-    "print('Factorial of', n, 'is:',fact)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "factorial using iterative(for loop)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num = int(input('Enter a number: '))\n",
-    "fact = 1\n",
-    "for i in range(num,0,-1):\n",
-    "    fact = fact*i\n",
-    "print('Factorial of', num, 'is',fact)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Factorial using Recursion (Recursion work top to bottom and left to right)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fact(num):\n",
-    "    if num ==0:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return num*fact(num-1)\n",
+    "str1 = '  pencil  '\n",
+    "x = str1.strip()\n",
+    "print(x)\n",
     "\n",
-    "num = 5\n",
-    "value = fact(num)\n",
-    "print('The factorial of',num,'is',value)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Printing Stars '*' in Square Shape"
+    "str2 = ',,,rrttgg....pencil....rrrr'\n",
+    "x1 = str2.strip(',.grt') #lstrip(),#rstrip()\n",
+    "print(x1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rahul\n",
+      "DADADA\n"
+     ]
+    }
+   ],
    "source": [
-    "for row in range(1,6): #for row\n",
-    "    print() #for second line\n",
-    "    for col in range(1,6): #for column\n",
-    "        print('*',end='') #print star in same line"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Printing Stars '*' in Triangle Shape (Here column dependent on row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num = int(input('Enter a number: '))\n",
-    "for row in range(1,num+1): #for row\n",
-    "    print() #for second line\n",
-    "    for col in range(1,row+1): #for column that dependent on row\n",
-    "        print('*',end='') #print star in same line"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Printing Stars '*' in Inverted Triangle Shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num = int(input('Enter a number: '))\n",
-    "for row in range(num,0,-1): #for row\n",
-    "    print() #for second line\n",
-    "    for col in range(1,row+1): #for column that dependent on row\n",
-    "        print('*',end='') #print star in same line"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Printing Stars '*' in Right angled Triangle Shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num = int(input('Enter a number: '))\n",
-    "for row in range(1,num+1,2): #for row\n",
-    "    print() #for second line\n",
-    "    for col in range(1,row+1): #for column that dependent on row\n",
-    "        print('*',end='') #print star in same line"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Printing Stars '*' in Pyramid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num = int(input('Enter a number: '))\n",
-    "for row in range(1,num+1): #for row\n",
-    "     #for second line\n",
-    "    for col in range(1,num-row+1):\n",
-    "        print(end=' ')\n",
-    "    for col in range(1,row+1): #for column that dependent on row\n",
-    "        print('*',end='') #print star in same line\n",
-    "    print()"
+    "#lower\n",
+    "low='RAhuL'.lower()\n",
+    "up = 'dadada'.upper()\n",
+    "print(low)\n",
+    "print(up)"
    ]
   }
  ],
