--- a/100+Python-challenging-programming-exercises/1-10.ipynb
+++ b/100+Python-challenging-programming-exercises/1-10.ipynb
@@ -27,6 +27,179 @@
     "        l.append(i)\n",
     "print(l)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: Write a program which can compute the factorial of a given numbers. The results should be printed in a comma-separated sequence on a single line. Suppose the following input is supplied to the program: 8 Then, the output should be: 40320\n",
+    "\n",
+    "Hints: In case of input data being supplied to the question, it should be assumed to be a console input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fact(x):\n",
+    "    if x == 0:\n",
+    "        return 1\n",
+    "    return x * fact(x-1)\n",
+    "x = int(input('Enter a number: '))\n",
+    "print(fact(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25852016738884976640000\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input('Enter a number: '))\n",
+    "fact = 1\n",
+    "for i in range(1,x+1):\n",
+    "    fact = fact * i\n",
+    "print(fact)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input('Enter a number: '))\n",
+    "fact = 1\n",
+    "while x >= 1:\n",
+    "    fact = fact * x\n",
+    "    x = x -1\n",
+    "print(fact)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: With a given integral number n, write a program to generate a dictionary that contains (i, i*i) such that is an integral number between 1 and n (both included). and then the program should print the dictionary. Suppose the following input is supplied to the program: 8 Then, the output should be: {1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64}\n",
+    "\n",
+    "Hints: In case of input data being supplied to the question, it should be assumed to be a console input. Consider use dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64}\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter a Value: '))\n",
+    "d = {}\n",
+    "for i in range(1,n+1):\n",
+    "    d[i] = i*i\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: Write a program which accepts a sequence of comma-separated numbers from console and generate a list and a tuple which contains every number. Suppose the following input is supplied to the program: 34,67,55,33,12,98 Then, the output should be: ['34', '67', '55', '33', '12', '98'] ('34', '67', '55', '33', '12', '98')\n",
+    "\n",
+    "Hints: In case of input data being supplied to the question, it should be assumed to be a console input. tuple() method can convert list to tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '4', '5', '6']\n",
+      "('1', '2', '3', '4', '5', '6')\n"
+     ]
+    }
+   ],
+   "source": [
+    "values=input()\n",
+    "l=values.split(\",\")\n",
+    "t=tuple(l)\n",
+    "print(l)\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: Define a class which has at least two methods: getString: to get a string from console input printString: to print the string in upper case. Also please include simple test function to test the class methods.\n",
+    "\n",
+    "Hints: Use init method to construct some parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAHUL VAIDYA\n"
+     ]
+    }
+   ],
+   "source": [
+    "class InputOutString(object):\n",
+    "    def __init__(self):\n",
+    "        self.s = \"\"\n",
+    "\n",
+    "    def getString(self):\n",
+    "        self.s = input()\n",
+    "    \n",
+    "    def printString(self):\n",
+    "        print(self.s.upper())\n",
+    "\n",
+    "strObj = InputOutString()\n",
+    "strObj.getString()\n",
+    "strObj.printString()"
+   ]
   }
  ],
  "metadata": {
