--- a/100+Python-challenging-programming-exercises/1-10.ipynb
+++ b/100+Python-challenging-programming-exercises/1-10.ipynb
@@ -200,6 +200,175 @@
     "strObj.getString()\n",
     "strObj.printString()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: Write a program that calculates and prints the value according to the given formula: Q = Square root of [(2 * C * D)/H] Following are the fixed values of C and H: C is 50. H is 30. D is the variable whose values should be input to your program in a comma-separated sequence. Example Let us assume the following comma separated input sequence is given to the program: 100,150,180 The output of the program should be: 18,22,24\n",
+    "\n",
+    "Hints: If the output received is in decimal form, it should be rounded off to its nearest value (for example, if the output received is 26.0, it should be printed as 26) In case of input data being supplied to the question, it should be assumed to be a console input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18,22,24\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "c = 50\n",
+    "h = 30\n",
+    "value = []\n",
+    "\n",
+    "items = [x for x in input().split(',')]\n",
+    "for d in items:\n",
+    "    value.append(str(int(round(math.sqrt(2*c*float(d)/h)))))\n",
+    "print(','.join(value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: Write a program which takes 2 digits, X,Y as input and generates a 2-dimensional array. The element value in the i-th row and j-th column of the array should be i*j. Note: i=0,1.., X-1; j=0,1,¡­Y-1. Example Suppose the following inputs are given to the program: 3,5 Then, the output of the program should be: [[0, 0, 0, 0, 0], [0, 1, 2, 3, 4], [0, 2, 4, 6, 8]]\n",
+    "\n",
+    "Hints: Note: In case of input data being supplied to the question, it should be assumed to be a console input in a comma-separated form."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5]\n",
+      "3\n",
+      "5\n",
+      "[[0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0]]\n",
+      "[[0, 0, 0, 0, 0], [0, 1, 2, 3, 4], [0, 2, 4, 6, 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_str = input()\n",
+    "dimensions = [int(x) for x in input_str.split(',')]\n",
+    "print(dimensions)\n",
+    "rowNum = dimensions[0]\n",
+    "print(rowNum)\n",
+    "colNum = dimensions[1]\n",
+    "print(colNum)\n",
+    "multiList = [[0 for col in range(colNum)] for row in range(rowNum)]\n",
+    "print(multiList)\n",
+    "for row in range(rowNum):\n",
+    "    for col in range(colNum):\n",
+    "        multiList[row][col] = row*col\n",
+    "print(multiList)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: Write a program that accepts a comma separated sequence of words as input and prints the words in a comma-separated sequence after sorting them alphabetically. Suppose the following input is supplied to the program: without,hello,bag,world Then, the output should be: bag,hello,without,world\n",
+    "\n",
+    "Hints: In case of input data being supplied to the question, it should be assumed to be a console input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bag,hello,without,world\n"
+     ]
+    }
+   ],
+   "source": [
+    "items=[x for x in input().split(',')]\n",
+    "items.sort()\n",
+    "print(','.join(items))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question£º Write a program that accepts sequence of lines as input and prints the lines after making all characters in the sentence capitalized. Suppose the following input is supplied to the program: Hello world Practice makes perfect Then, the output should be: HELLO WORLD PRACTICE MAKES PERFECT\n",
+    "\n",
+    "Hints: In case of input data being supplied to the question, it should be assumed to be a console input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO WORLD PRACTICE MAKES PERFECT\n",
+      "HELLO WORLD PRACTICE MAKES PERFECT\n"
+     ]
+    }
+   ],
+   "source": [
+    "lines = []\n",
+    "while True:\n",
+    "    s = input()\n",
+    "    if s:\n",
+    "        lines.append(s.upper())\n",
+    "    else:\n",
+    "        break;\n",
+    "\n",
+    "for sentence in lines:\n",
+    "    print(sentence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: Write a program that accepts a sequence of whitespace separated words as input and prints the words after removing all duplicate words and sorting them alphanumerically. Suppose the following input is supplied to the program: hello world and practice makes perfect and hello world again Then, the output should be: again and hello makes perfect practice world\n",
+    "\n",
+    "Hints: In case of input data being supplied to the question, it should be assumed to be a console input. We use set container to remove duplicated data automatically and then use sorted() to sort the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input()\n",
+    "words = [word for word in s.split(\" \")]\n",
+    "print(\" \".join(sorted(list(set(words)))))"
+   ]
   }
  ],
  "metadata": {
